# Turbine_Q3

./: .gitignore  wallet-converter.ts
http_rust/: Cargo.toml  README.md  env.example  test_api.sh
http_rust/src/: error.rs  handlers.rs  main.rs  types.rs
practice/: data.ts  package.json  tsconfig.json
programs/: Turbin3_prereq.ts
turbine_prereq1/: airdrop.ts  enroll.ts  keygen.ts  package.json  transfer.ts  tsconfig.json
turbine_prereq2/: Cargo.toml  README.md  turbin3_idl.json
turbine_prereq2/src/: lib.rs
week1/day1/: Cargo.toml  readme.md
week1/day1/src/: lib.rs
week1/day2/: Cargo.toml  README.md  getting_started.md
week1/day2/examples/: token_operations.rs
week1/day2/src/: lib.rs
week1/day3/: Cargo.toml  README.md
week1/day3/examples/: create_gaming_token.rs  create_stablecoin.rs  manage_associated_accounts.rs
week1/day3/src/: lib.rs
