[package]
name = "http_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Solana blockchain interaction
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"

# Serialization and JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"

# Base58 encoding for keys
bs58 = "0.5"

# Environment variables
dotenv = "0.15"

# Date and time
chrono = { version = "0.4", features = ["serde"] }
