[package]
name = "solana-pda-spl-nft"
version = "0.1.0"
edition = "2021"
description = "Solana program demonstrating PDAs, SPL tokens, and NFTs"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_pda_spl_nft"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
# Core Anchor framework
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

# Solana core dependencies
solana-program = "~1.16.0"

# Metaplex for NFT metadata
mpl-token-metadata = "1.13.2"

# Utility crates
borsh = "^0.10"
arrayref = "0.3.6"

[dev-dependencies]
# Testing dependencies
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1