[package]
name = "spl-token-deep-dive"
version = "0.1.0"
edition = "2021"
description = "Comprehensive guide to SPL token generation, management, and operations on Solana"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token_deep_dive"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
# Core Anchor framework
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

# Solana core dependencies
solana-program = "~1.16.0"
spl-token = "~4.0.0"
spl-associated-token-account = "~2.3.0"

# Metaplex for token metadata
mpl-token-metadata = "4.1.2"

# Utility crates
borsh = "^0.10"
arrayref = "0.3.6"
sha2 = "0.10.6"
bs58 = "0.4.0"

[dev-dependencies]
# Testing dependencies
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 