[package]
name = "create-your-own-spl-token"
version = "0.1.0"
edition = "2021"
description = "Complete guide to creating your own SPL tokens with associated accounts"

[lib]
crate-type = ["cdylib", "lib"]
name = "create_your_own_spl_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
# Core Anchor framework
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

# Solana core dependencies
solana-program = "~1.16.0"
spl-token = "~4.0.0"
spl-associated-token-account = "~2.3.0"

# Metaplex for token metadata
mpl-token-metadata = "4.1.2"

# Utility crates for token creation
borsh = "^0.10"
arrayref = "0.3.6"
sha2 = "0.10.6"
bs58 = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Testing dependencies
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
proptest = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[[example]]
name = "create_gaming_token"
path = "examples/create_gaming_token.rs"

[[example]]
name = "create_stablecoin"
path = "examples/create_stablecoin.rs"

[[example]]
name = "manage_associated_accounts"
path = "examples/manage_associated_accounts.rs" 